fast fertig es fehlt noch enduro motorräder

--- a/cruiser.html
+++ b/cruiser.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <link href="style.css" rel="stylesheet">
     <link href="navigation-bar.css" rel="stylesheet">
-
+    <link href="galery.css" rel="stylesheet">
+    <link href="style-racebikes.css" rel="stylesheet">
 </head>
 <body>
 <div class="top-navigation">
@@ -21,8 +22,166 @@
 <div>
     <br>
     <br>
-    <h1>Cruiser</h1>
+    <h1 class="cruiser-heading">Cruiser</h1>
+    <p>Cruiser-Motorräder stehen für entspanntes Fahren und pure Gelassenheit. Mit ihrem markanten, oft klassischen
+        Design, einer bequemen Sitzposition und kraftvollen Motoren bieten sie eine perfekte Mischung aus Komfort und
+        Stil. Sie eignen sich ideal für gemütliche Fahrten und kürzere Touren, bei denen der Weg ebenso viel zählt wie
+        das Ziel. Der charakteristische Sound und das besondere Fahrgefühl machen jeden Ausflug zu einem Erlebnis, das
+        Freiheit und Lebensfreude verkörpert.</p>
+    <br>
 </div>
+<div>
+    <h2>Technik</h2>
+    <p>Cruiser-Motorräder kombinieren robuste Technik mit einem klassischen Designansatz, der für Langlebigkeit und
+        Fahrkomfort optimiert ist. Sie verfügen in der Regel über großvolumige V2-Motoren, die ein hohes Drehmoment bei
+        niedrigen Drehzahlen liefern – ideal für entspanntes Cruisen und souveräne Beschleunigung.
+    </p>
+    <p>
+        Die Rahmenkonstruktionen sind oft aus Stahl gefertigt, was für Stabilität sorgt, während die langen Radstände
+        ein ruhiges und komfortables Fahrverhalten gewährleisten. Hinzu kommen breite Reifen, die nicht nur optisch
+        beeindrucken, sondern auch eine solide Straßenlage bieten.
+    </p>
 
+    <p>
+        Ein weiteres Highlight vieler Cruiser ist die Anpassbarkeit: Von Auspuffanlagen über Sitze bis hin zu
+        Gepäcklösungen bieten sie zahlreiche Möglichkeiten zur Personalisierung, damit das Motorrad perfekt auf den
+        Fahrer abgestimmt werden kann.</p>
+</div>
+<div class="galery">
+    <img src="https://powersports.honda.com/motorcycle/-/media/products/family/shadow-phantom/trims/trim-main/shadow-phantom-abs/2025/2025-shadow-phantom-abs-deep_pearl_gray-1505x923.png?imwidth=1024"
+         alt="cruiser1">
+</div>
+<div class="cruiser-list">
+    <br>
+    <br>
+    <h2>Sicherheit</h2>
+    <p>Cruiser-Motorräder bieten nicht nur Komfort und Fahrspaß, sondern auch eine Reihe von Sicherheitsmerkmalen, die
+        speziell auf die Bedürfnisse von Fahrern ausgelegt sind. Aufgrund ihrer stabilen Bauweise und der entspannten
+        Sitzposition bieten sie eine gute Kontrolle, besonders auf langen Fahrten oder bei gemütlichem Cruisen</p>
+    <br>
+    <ol>
+        <li><b>Stabilität und Fahrverhalten:</b></li>
+        <br>
+        <ul>
+            <li>Cruiser zeichnen sich durch einen langen Radstand und eine niedrige Sitzhöhe aus, was für ein sicheres
+                und kontrolliertes Fahrverhalten sorgt.
+            </li>
+            <br>
+            <li>Diese Eigenschaften bieten mehr Stabilität, insbesondere bei
+                niedrigen Geschwindigkeiten und in Kurven, was für weniger erfahrene Fahrer von Vorteil ist.
+            </li>
+        </ul>
+        <br>
+        <br>
+        <li><b>Sicherheitsausstattung:</b></li>
+        <br>
+        <ul>
+            <li>Moderne Cruiser sind mit verschiedenen Sicherheitsmerkmalen ausgestattet, wie z. B. Antiblockiersystemen
+                (ABS), Traktionskontrolle und stabilen Bremsen, die helfen, die Kontrolle über das Fahrzeug zu behalten,
+                insbesondere bei schwierigen Fahrbedingungen wie Regen oder rutschigen Straßen.
+            </li>
+        </ul>
+        <br>
+        <br>
+        <li><b>Schutzkleidung und Ergonomie:</b></li>
+        <br>
+        <ul>
+            <li>Cruiser bieten eine entspannte Sitzposition, die Rücken und Gelenke schont. Dennoch ist es wichtig,
+                geeignete Schutzkleidung zu tragen, wie etwa einen Helm, Lederjacken und -hosen, um das Risiko bei einem
+                Unfall zu minimieren. Einige Cruiser sind mit Windschutzscheiben ausgestattet, die den Fahrer vor
+                Winddruck schützen, was besonders auf längeren Strecken den Komfort erhöht.
+            </li>
+        </ul>
+        <br>
+        <img src="kleidung.png" alt="schutzkleidung">
+        <br>
+        <br>
+        <br>
+        <li><b>Sichtbarkeit:</b></li>
+        <br>
+        <ul>
+            <li>Ein großer Vorteil von Cruisern ist ihre oft auffällige Größe und das markante Design, was die
+                Sichtbarkeit auf der Straße erhöht.
+            </li>
+            <br>
+            <li>Dennoch sollte der Fahrer auf gute Beleuchtung und reflektierende Elemente achten, um die eigene
+                Sichtbarkeit im Straßenverkehr zu optimieren.
+            </li>
+        </ul>
+        <br>
+        <br>
+        <li><b>Handling bei höheren Geschwindigkeiten:</b></li>
+        <br>
+        <ul>
+            <li>Obwohl Cruiser auf niedrigen bis mittleren Geschwindigkeiten optimal performen, sollte der Fahrer
+                vorsichtig sein, wenn er hohe Geschwindigkeiten anstrebt.
+            </li>
+            <br>
+            <li>Durch das höhere Gewicht und die entspannte Fahrposition sind Cruisermotorräder bei extremen
+                Geschwindigkeiten nicht so handlich wie sportlichere Modelle.
+            </li>
+            <br>
+            <li>Es ist wichtig, das Fahrverhalten zu kennen und sich nicht zu überschätzen.</li>
+            <br>
+        </ul>
+        </ul>
+    </ol>
+</div>
+<div>
+    <h2><b>Design und Stil</b></h2>
+    <p>Cruiser zeichnen sich durch ihr einzigartiges, oft klassisches Design aus. Sie sind bekannt für ihre niedrige,
+        lange Bauweise und die markante Optik, die sie von anderen Motorrädern unterscheidet. Viele Cruiser haben
+        auffällige Details wie verchromte Teile, große Scheinwerfer und ein minimalistisches, aber robustes
+        Erscheinungsbild.</p>
+    <br>
+    <img src="https://www.driva.com.au/static/2f85efd726dea027f5e6213beed10fb1/4d0df/6327f4e6-da1b-40b6-8ba4-3f49b30fe1cd_iPiccy-img(238).jpg"
+         alt="cruiser2">
+    <br>
+    <br>
+</div>
+<div>
+    <h2><b>Fahrkultur und Gemeinschaft</b></h2>
+    <p>Cruiser-Motorräder sind oft mehr als nur ein Fortbewegungsmittel; sie sind ein Lifestyle. </p>
+    <p>Die Cruiser-Kultur
+        betont das Gefühl von Freiheit, Abenteuer und Kameradschaft. Viele Cruiser-Fahrer nehmen an Treffen und Events
+        teil, bei denen sie ihre Maschinen präsentieren und ihre Leidenschaft für das Fahren teilen.</p>
+</div>
+<div>
+    <br>
+    <br>
+    <br>
+    <h2><b>Beliebte Modelle</b></h2>
+    <div class="galery">
+
+        <img class="img-racebikesite" src="cruiser-pic1.png" alt="cruiser3">
+    </div>
+    <p class="cruiser-p"><b>Harley Davidson Sportstar</b></p>
+    <div class="galery">
+        <img class="img-racebikesite" src="cruiser-pic2.png" alt="cruiser3">
+    </div>
+    <p class="cruiser-p"><b>Dirty Dozen</b></p>
+</div>
+<div>
+    <h2><b>Fazit</b></h2>
+    <br>
+    <p>Cruiser-Motorräder bieten eine ausgezeichnete Mischung aus Komfort und Stil. Mit ihrer entspannten Sitzposition
+        und dem markanten Design sind sie ideal für längere Fahrten und Reisen.
+    </p>
+    <p>Die großen Motoren sorgen für
+        ausreichend Leistung, während die stabile Bauweise für eine ruhige Fahrt sorgt. Dank ihrer Anpassbarkeit sind
+        Cruiser auch ein beliebtes Modell für Fahrer, die ihre Maschinen individuell gestalten möchten.</p>
+</div>
+<br>
+<br>
+<div>
+    <h2><b>Empfehlung</b></h2>
+    <br>
+    <p>Cruiser sind besonders gut für Fahrer geeignet, die Wert auf Komfort und ein entspanntes Fahrgefühl legen. Sie
+        sind ideal für lange Touren und Reisen, bieten aber weniger Wendigkeit bei sehr hohen Geschwindigkeiten. </p>
+    <p>Daher sind sie eher für erfahrene Fahrer geeignet, die das gemütliche Fahren bevorzugen und nicht auf der Suche
+        nach extrem sportlicher Leistung sind.</p>
+    <p> Ein Cruiser eignet sich hervorragend für diejenigen, die auf der Suche
+        nach einem stilvollen Motorrad für längere Strecken sind.</p>
+</div>
 </body>
 </html>
