--- a/racebikes.html
+++ b/racebikes.html
@@ -1,13 +1,13 @@
 <html>
 <head>
     <title>Supersportler</title>
-    <link href = "style-racebikes.css" rel = "stylesheet">
-    <link href = "style.css" rel = "stylesheet">
+    <link href="style-racebikes.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
     <link href="navigation-bar.css" rel="stylesheet">
     <link href="galery.css" rel="stylesheet">
     <meta charset="UTF-8">
 </head>
-<body>
+<body class="body">
 <div class="top-navigation">
     <div class="logo">
         <a href="index.html">MotoWorld</a>
@@ -26,32 +26,40 @@
     <h1 class="galery-superbikes-heading">Supersportler</h1>
 </div>
 <div class="galery">
-    <img class="logo-img" src="https://wlassets.aprilia.com/wlassets/aprilia/master/Range/RS660/family_page/box/ApriliaRS660-Range/original/ApriliaRS660-Range.png?1726480103192" alt="superbike6">
+    <img class="logo-img"
+         src="https://wlassets.aprilia.com/wlassets/aprilia/master/Range/RS660/family_page/box/ApriliaRS660-Range/original/ApriliaRS660-Range.png?1726480103192"
+         alt="superbike6">
 </div>
 <div>
-<h2>Supersportler: Geschwindigkeit und Präzision</h2>
-<p>
-    Supersportler stehen für pure Leistung und fortschrittliche Technologie.
-    Diese Maschinen wurden entwickelt, um sowohl auf der Rennstrecke als auch auf der Straße zu glänzen.
-    Mit beeindruckender Beschleunigung, präzisem Handling und modernster Elektronik bieten sie ein unvergleichliches Fahrerlebnis.
-    Entdecke hier die besten Modelle und erfahre, was sie so einzigartig macht!
-</p>
+    <h2>Supersportler: Geschwindigkeit und Präzision</h2>
+    <p>
+        Supersportler stehen für pure Leistung und fortschrittliche Technologie.
+        Diese Maschinen wurden entwickelt, um sowohl auf der Rennstrecke als auch auf der Straße zu glänzen.
+        Mit beeindruckender Beschleunigung, präzisem Handling und modernster Elektronik bieten sie ein unvergleichliches
+        Fahrerlebnis.
+        Entdecke hier die besten Modelle und erfahre, was sie so einzigartig macht!
+    </p>
 </div>
 
 <div class="img-racebikesite">
     <img src="https://i.pinimg.com/originals/5e/e7/9b/5ee79b20b96cda3fb0efbbed76e12645.png" alt="superbike1">
-    <img src="https://purepng.com/public/uploads/large/purepng.com-bmw-s1000rr-blackbmwmotorcyclemotorbikebikevehicle-9815251668252ahxw.png" alt="superbike2">
+    <img src="https://purepng.com/public/uploads/large/purepng.com-bmw-s1000rr-blackbmwmotorcyclemotorbikebikevehicle-9815251668252ahxw.png"
+         alt="superbike2">
 </div>
 <div>
     <h2>Die Technik</h2>
     <p>
-        Supersportler sind High-Tech-Maschinen, die modernste Technologien nutzen, um maximale Leistung und Präzision zu erreichen.
+        Supersportler sind High-Tech-Maschinen, die modernste Technologien nutzen, um maximale Leistung und Präzision zu
+        erreichen.
         Sie verfügen über leichte Rahmen aus Aluminium oder Carbon, die für hohe Stabilität und Wendigkeit sorgen.
-        Leistungsstarke Motoren mit mehreren hundert PS liefern atemberaubende Beschleunigung und Topspeeds von über 300 km/h.
+        Leistungsstarke Motoren mit mehreren hundert PS liefern atemberaubende Beschleunigung und Topspeeds von über 300
+        km/h.
     </p>
     <p>
-        Fortschrittliche Elektroniksysteme wie Traktionskontrolle, Kurven-ABS und Launch Control gewährleisten Sicherheit und optimales Handling,
-        selbst unter extremen Bedingungen. Aerodynamische Designs minimieren den Luftwiderstand und steigern die Performance.
+        Fortschrittliche Elektroniksysteme wie Traktionskontrolle, Kurven-ABS und Launch Control gewährleisten
+        Sicherheit und optimales Handling,
+        selbst unter extremen Bedingungen. Aerodynamische Designs minimieren den Luftwiderstand und steigern die
+        Performance.
         Supersportler sind der perfekte Mix aus Ingenieurskunst und Leidenschaft für Geschwindigkeit.
     </p>
 </div>
@@ -59,9 +67,12 @@
     <br>
     <h2>Die Geschichte</h2>
     <p>
-        Supersportler sind die Spitze der Motorradtechnik und haben sich über die Jahre zu den ultimativen Maschinen im Bereich
-        Leistung und Geschwindigkeit entwickelt. Die Geschichte der Supersportler beginnt in den späten 1960er Jahren, als
-        Motorradhersteller wie Honda und Kawasaki begannen, Motorräder zu bauen, die für den Rennsport geeignet waren und
+        Supersportler sind die Spitze der Motorradtechnik und haben sich über die Jahre zu den ultimativen Maschinen im
+        Bereich
+        Leistung und Geschwindigkeit entwickelt. Die Geschichte der Supersportler beginnt in den späten 1960er Jahren,
+        als
+        Motorradhersteller wie Honda und Kawasaki begannen, Motorräder zu bauen, die für den Rennsport geeignet waren
+        und
         gleichzeitig auf der Straße gefahren werden konnten.
     </p>
     <p>
@@ -73,11 +84,14 @@
     <p>
         In den 1990er Jahren erreichten Supersportler wie die Yamaha YZF-R1 und die Suzuki GSX-R750 neue Höhen in Sachen
         Geschwindigkeit, Fahrstabilität und Elektronik. Diese Motorräder dominierten nicht nur die Rennstrecken, sondern
-        setzten auch auf der Straße neue Maßstäbe in der Technologie. Heutzutage sind Supersportler wie die Kawasaki Ninja ZX-10R
-        und die Ducati Panigale V4 nicht nur Meisterwerke der Ingenieurskunst, sondern auch Symbole für Geschwindigkeit und Präzision.
+        setzten auch auf der Straße neue Maßstäbe in der Technologie. Heutzutage sind Supersportler wie die Kawasaki
+        Ninja ZX-10R
+        und die Ducati Panigale V4 nicht nur Meisterwerke der Ingenieurskunst, sondern auch Symbole für Geschwindigkeit
+        und Präzision.
     </p>
     <p>
-        Die Geschichte der Supersportler zeigt die ständige Weiterentwicklung von Technik, Design und Leistung, die diese
+        Die Geschichte der Supersportler zeigt die ständige Weiterentwicklung von Technik, Design und Leistung, die
+        diese
         Motorräder zu den begehrtesten und faszinierendsten Maschinen der Motorradwelt machen.
     </p>
 </div>
@@ -87,21 +101,28 @@
 <div>
     <h2>Der Preis</h2>
     <p>
-        Supersportler gehören zu den teuersten Motorrädern auf dem Markt, da sie höchste Leistung, fortschrittlichste Technologie
-        und herausragendes Design bieten. Die Preise variieren je nach Hersteller, Modell und Ausstattung. Einsteiger-Modelle
-        beginnen oft bei etwa 10.000 bis 15.000 Euro, während Premium-Marken wie Ducati oder BMW für ihre Top-Modelle Preise von
-        über 20.000 Euro verlangen können. Exklusive Sondereditionen oder limitierte Modelle können sogar noch teurer sein.
+        Supersportler gehören zu den teuersten Motorrädern auf dem Markt, da sie höchste Leistung, fortschrittlichste
+        Technologie
+        und herausragendes Design bieten. Die Preise variieren je nach Hersteller, Modell und Ausstattung.
+        Einsteiger-Modelle
+        beginnen oft bei etwa 10.000 bis 15.000 Euro, während Premium-Marken wie Ducati oder BMW für ihre Top-Modelle
+        Preise von
+        über 20.000 Euro verlangen können. Exklusive Sondereditionen oder limitierte Modelle können sogar noch teurer
+        sein.
     </p>
     <p>
-        Der Preis spiegelt sich in der Qualität und den Innovationen wider, die in jedem Supersportler stecken. Neben der
+        Der Preis spiegelt sich in der Qualität und den Innovationen wider, die in jedem Supersportler stecken. Neben
+        der
         Leistung auf der Straße und der Rennstrecke bieten diese Motorräder oft eine außergewöhnliche Ausstattung, die
-        speziell für erfahrene Fahrer entwickelt wurde. Wer jedoch in einen Supersportler investiert, bekommt nicht nur ein
+        speziell für erfahrene Fahrer entwickelt wurde. Wer jedoch in einen Supersportler investiert, bekommt nicht nur
+        ein
         Motorrad, sondern ein wahres Meisterwerk der Technik.
     </p>
 
     <h2>Die bekanntesten Hersteller</h2>
     <p>
-        Es gibt zahlreiche Hersteller, die sich auf die Entwicklung und Produktion von Supersportlern spezialisiert haben.
+        Es gibt zahlreiche Hersteller, die sich auf die Entwicklung und Produktion von Supersportlern spezialisiert
+        haben.
         Zu den bekanntesten Marken gehören:
     </p>
     <br>
@@ -113,6 +134,25 @@
         <li><a class="hersteller-link" href="https://www.yamaha-motor.eu" target="_blank">Yamaha</a></li>
         <li><a class="hersteller-link" href="https://www.bmw-motorrad.de" target="_blank">BMW</a></li>
     </ul>
+</div>
+<div>
+    <br>
+    <br>
+    <h2>Fazit</h2>
+    <p>Supersportler sind das Nonplusultra für alle, die den Nervenkitzel von Geschwindigkeit und Präzision erleben
+        möchten. Mit ihren aerodynamischen Designs, kraftvollen Motoren und hochmodernen Technologien bieten sie
+        unvergleichliche Performance, sowohl auf der Straße als auch auf der Rennstrecke. Allerdings sind sie nicht für
+        jeden geeignet: Ihr Fokus liegt klar auf sportlicher Fahrweise, was sie oft weniger komfortabel und
+        alltagstauglich macht. Doch für echte Enthusiasten und Adrenalinjunkies bleibt der Supersportler ein Symbol
+        purer Leidenschaft und technischer Exzellenz.</p>
+</div>
+<div>
+    <br>
+    <br>
+    <h2>Meine Empfehlung</h2>
+    <p>Supersportler sind vor allem etwas für erfahrene Fahrer, die die Leistung und das Handling solcher Maschinen
+        sicher beherrschen können. Für längere Strecken wie Reisen oder gemütliches Cruisen sind sie hingegen weniger
+        geeignet, da Komfort und Vielseitigkeit bei diesen Modellen nicht im Vordergrund stehen.</p>
 </div>
 </body>
 </html>
