--- a/touring-bikes.html
+++ b/touring-bikes.html
@@ -30,8 +30,10 @@
     <br>
     <p>
         Touring-Motorräder sind die ideale Wahl für längere Fahrten und ausgedehnte Touren. Sie bieten höchsten Komfort,
-        ausgezeichnete Fahrstabilität und eine Vielzahl an Ausstattungsmerkmalen, die lange Reisen angenehmer machen. Mit
-        komfortablen Sitzpositionen, großzügigem Stauraum und leistungsstarken Motoren sind sie perfekt für Abenteuer auf
+        ausgezeichnete Fahrstabilität und eine Vielzahl an Ausstattungsmerkmalen, die lange Reisen angenehmer machen.
+        Mit
+        komfortablen Sitzpositionen, großzügigem Stauraum und leistungsstarken Motoren sind sie perfekt für Abenteuer
+        auf
         der Straße. Ob für eine Wochenendfahrt oder eine Reise über Tausende von Kilometern, Touring-Motorräder sind
         darauf ausgelegt, Fahrer über lange Distanzen mit Leichtigkeit und Komfort zu begleiten.
     </p>
@@ -104,14 +106,16 @@
         <h2><b>Unterschied Touring-Motorräder und Cruiser</b></h2>
         <p>
             Touring-Motorräder und Cruiser sind zwei verschiedene Arten von Motorrädern, die für unterschiedliche Zwecke
-            konzipiert sind. Während Cruiser für entspannte Fahrten und kurze Ausflüge gedacht sind, sind Touring-Motorräder
+            konzipiert sind. Während Cruiser für entspannte Fahrten und kurze Ausflüge gedacht sind, sind
+            Touring-Motorräder
             für lange Strecken und Reisen ausgelegt. Cruiser zeichnen sich durch ihr entspanntes Fahrverhalten und ihren
             lässigen Stil aus, während Touring-Motorräder mit umfangreicher Ausstattung und Komfortmerkmalen wie
             Windschutzscheiben, beheizten Griffen und Sitzheizung ausgestattet sind. Cruiser sind ideal für Fahrer, die
             Wert auf Stil und Gelassenheit legen, während Touring-Motorräder für Fahrer gedacht sind, die lange Strecken
             zurücklegen</p>
+        <br>
         <div class="touringbikes-button">
-        <a href="cruiser.html" class="btn btn-primary" role="button">Mehr Informationen über Cruiser</a>
+            <a href="cruiser.html" class="btn btn-primary" role="button">Mehr Informationen über Cruiser</a>
         </div>
     </div>
     <div>
@@ -121,12 +125,83 @@
             Touring-Motorräder sind mit einer Vielzahl von Technologien ausgestattet, die das Fahren sicherer und
             komfortabler machen. Moderne Motoren bieten eine ausgewogene Leistungsentfaltung und eine hohe
             Kraftstoffeffizienz. Elektronische Fahrhilfen wie Traktionskontrolle, ABS und Fahrmodi sorgen für optimale
-            Kontrolle und Sicherheit in allen Fahrsituationen. Komfortmerkmale wie beheizte Griffe, Windschutzscheiben und
+            Kontrolle und Sicherheit in allen Fahrsituationen. Komfortmerkmale wie beheizte Griffe, Windschutzscheiben
+            und
             einstellbare Fahrwerke machen lange Fahrten angenehmer und ermüdungsfreier. Touring-Motorräder sind die
             perfekte Wahl für Fahrer, die Wert auf Komfort, Leistung und Zuverlässigkeit legen.
         </p>
-        <img class ="touring-bikes-img" src="s1000rr-motor.png" alt="motor">
+        <img class="touring-bikes-img" src="s1000rr-motor.png" alt="motor">
     </div>
+    <br>
+    <br>
+    <br>
+
+</div>
+<div class="touring-bikes-table">
+    <h2><b>Vergleich: Touringmotorräder vs. Supersportler</b></h2>
+    <table>
+        <thead>
+        <tr>
+            <th>Merkmal</th>
+            <th>Touringmotorräder</th>
+            <th>Supersportler</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td><strong>Sitzposition</strong></td>
+            <td>Aufrecht und komfortabel, ideal für lange Strecken.</td>
+            <td>Sportlich und nach vorne gebeugt, für eine aerodynamische Haltung.</td>
+        </tr>
+        <tr>
+            <td><strong>Leistung</strong></td>
+            <td>Ausreichend Power für Langstrecken und beladenes Fahren.</td>
+            <td>Höchstleistung für maximale Beschleunigung und Geschwindigkeit.</td>
+        </tr>
+        <tr>
+            <td><strong>Stauraum</strong></td>
+            <td>Großzügige Koffer und Taschen für Gepäck.</td>
+            <td>Kein oder minimaler Stauraum, Fokus auf Leichtbauweise.</td>
+        </tr>
+        <tr>
+            <td><strong>Windschutz</strong></td>
+            <td>Große Windschutzscheiben bieten Schutz vor Wind und Wetter.</td>
+            <td>Kleine Verkleidungen, optimiert für Aerodynamik, weniger Komfort.</td>
+        </tr>
+        <tr>
+            <td><strong>Beifahrer</strong></td>
+            <td>Bequemer Platz und Ausstattung für Beifahrer.</td>
+            <td>Enger Sitz, wenig Komfort für Beifahrer.</td>
+        </tr>
+        <tr>
+            <td><strong>Einsatzgebiet</strong></td>
+            <td>Lange Touren, Reisen und entspannte Fahrten.</td>
+            <td>Rennstrecken, kurvige Landstraßen und sportliches Fahren.</td>
+        </tr>
+        <tr>
+            <td><strong>Kraftstoffverbrauch</strong></td>
+            <td>Effizient, auch bei beladenem Fahren.</td>
+            <td>Höherer Verbrauch durch leistungsstarke Motoren.</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+<div>
+    <br>
+    <br>
+    <h2><b>Fazit</b></h2>
+    <p>Tourenmotorräder sind die perfekte Wahl für alle, die längere Strecken mit Komfort und Leichtigkeit zurücklegen
+        möchten. Mit ihrer entspannten Sitzposition, großzügigen Stauraumoptionen und modernen Features wie Tempomat
+        oder Heizgriffen sind sie speziell für Reisen und Abenteuer ausgelegt. Sie verbinden Funktionalität mit Fahrspaß
+        und machen auch anspruchsvolle Touren zu einem Genuss.</p>
+</div>
+<div>
+    <br>
+    <h2><b>Empfehlung</b></h2>
+    <p>Tourenmotorräder eignen sich ideal für Fahrer, die den Fokus auf Bequemlichkeit und Vielseitigkeit legen. Sie
+        sind hervorragend für Reisen und Langstrecken geeignet, aber weniger die richtige Wahl, wenn es um extreme
+        sportliche Performance oder das Fahren auf der Rennstrecke geht. Besonders Einsteiger sollten sich an
+        Tourenmotorräder heranwagen, da sie meist leicht zu handhaben und gutmütig im Fahrverhalten sind.</p>
 </div>
 </body>
 </html>
