--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <title>Home</title>
     <meta charset="UTF-8">
-    <link href = "style.css" rel = "stylesheet">
+    <link href="style.css" rel="stylesheet">
     <link href="navigation-bar.css" rel="stylesheet">
 </head>
 <body>
@@ -14,9 +14,10 @@
         <a href="index.html">Home</a>
         <a href="racebikes.html">Supersportler</a>
         <a href="touring-bikes.html">Touring-Motorräder</a>
+        <a href="enduro.html">Enduro</a>
         <a href="galery.html">Galerie</a>
     </nav>
-</div> 
+</div>
 
 <div>
     <br>
@@ -26,15 +27,20 @@
 <div>
     <h1>Willkommen in der Welt der Motorräder</h1>
     <p>
-        Motorräder sind nicht nur ein Fortbewegungsmittel, sondern auch ein Symbol für Freiheit, Abenteuer und Technologie.
-        Seit ihrer Erfindung im späten 19. Jahrhundert haben sich Motorräder zu leistungsstarken Maschinen entwickelt, die sowohl
-        für den täglichen Gebrauch als auch für den Rennsport genutzt werden. Ob Supersportler, Cruiser oder Touring-Bikes – jedes
+        Motorräder sind nicht nur ein Fortbewegungsmittel, sondern auch ein Symbol für Freiheit, Abenteuer und
+        Technologie.
+        Seit ihrer Erfindung im späten 19. Jahrhundert haben sich Motorräder zu leistungsstarken Maschinen entwickelt,
+        die sowohl
+        für den täglichen Gebrauch als auch für den Rennsport genutzt werden. Ob Supersportler, Cruiser oder
+        Touring-Bikes – jedes
         Motorrad hat seine eigene Geschichte und Technik, die es einzigartig machen.
     </p>
     <p>
-        Auf dieser Website tauchst du ein in die faszinierende Welt der Motorräder. Entdecke die neuesten Modelle, spannende
+        Auf dieser Website tauchst du ein in die faszinierende Welt der Motorräder. Entdecke die neuesten Modelle,
+        spannende
         Innovationen und die Geschichte hinter den Maschinen, die uns faszinieren und begeistern.
-        Egal ob du ein erfahrener Fahrer oder ein Neuling bist – hier findest du alles, was du über Motorräder wissen musst.
+        Egal ob du ein erfahrener Fahrer oder ein Neuling bist – hier findest du alles, was du über Motorräder wissen
+        musst.
     </p>
 
 </div>
@@ -43,15 +49,29 @@
     <br>
     <h2>Wie ich zu Motorrädern kam</h2>
     <p>
-        Schon als Kind war ich von Motorrädern fasziniert. Die Kombination aus Geschwindigkeit, Freiheit und dem wahnsinnigen Sound hat mich schon damals in sie verliebt. Ich erinnere mich, wie ich stundenlang Videos von Motocross-Rennen angeschaut und davon geträumt habe, selbst einmal auf einer Maschine zu sitzen.
+        Schon als Kind war ich von Motorrädern fasziniert. Die Kombination aus Geschwindigkeit, Freiheit und dem
+        wahnsinnigen Sound hat mich schon damals in sie verliebt. Ich erinnere mich, wie ich stundenlang Videos von
+        Motocross-Rennen angeschaut und davon geträumt habe, selbst einmal auf einer Maschine zu sitzen.
     </p>
     <p>
-        Mit der Zeit wurde aus dieser Faszination eine echte Leidenschaft. Egal ob es der Nervenkitzel beim Fahren oder die Technik der Motorräder selbst ist – für mich ist es mehr als nur ein Hobby. Motorräder sind ein Lebensgefühl, und ich möchte diese Begeisterung mit euch teilen.
+        Mit der Zeit wurde aus dieser Faszination eine echte Leidenschaft. Egal ob es der Nervenkitzel beim Fahren oder
+        die Technik der Motorräder selbst ist – für mich ist es mehr als nur ein Hobby. Motorräder sind ein
+        Lebensgefühl, und ich möchte diese Begeisterung mit euch teilen.
     </p>
     <p>
-        Auf dieser Website zeige ich meine Lieblingsmodelle, teile Tipps und Infos und hoffe, auch euch für diese faszinierende Welt begeistern zu können.
+        Auf dieser Website zeige ich meine Lieblingsmodelle, teile Tipps und Infos und hoffe, auch euch für diese
+        faszinierende Welt begeistern zu können.
     </p>
-
+</div>
+<br>
+<div class="info">
+    <h2>Wichtiger Hinweis</h2>
+    <p>
+        Motorradfahren, besonders auf ungesichertem Gelände, kann sehr gefährlich sein.
+        Es ist wichtig, sich gut vorzubereiten und die passenden Sicherheitsvorkehrungen zu treffen.
+        Für weitere Informationen und wichtige Hinweise für Fahrer, sowie Offroad-Fahrregeln in deiner Region,
+        <a href="safety.html">klicke hier</a>.
+    </p>
 </div>
 </body>
 </html>
