--- a/racebikes.html
+++ b/racebikes.html
@@ -16,6 +16,7 @@
         <a href="index.html">Home</a>
         <a href="racebikes.html">Supersportler</a>
         <a href="touring-bikes.html">Touring-Motorräder</a>
+        <a href="enduro.html">Enduro</a>
         <a href="galery.html">Galerie</a>
     </nav>
 </div>
