--- a/cruiser.html
+++ b/cruiser.html
@@ -135,8 +135,10 @@
         auffällige Details wie verchromte Teile, große Scheinwerfer und ein minimalistisches, aber robustes
         Erscheinungsbild.</p>
     <br>
+    <div class="cruiser-centered">
     <img src="https://www.driva.com.au/static/2f85efd726dea027f5e6213beed10fb1/4d0df/6327f4e6-da1b-40b6-8ba4-3f49b30fe1cd_iPiccy-img(238).jpg"
          alt="cruiser2">
+        </div>
     <br>
     <br>
 </div>
